refactor the PeakBoilerDialog I